Pull request #778: AG-51916 Fix scroll position for user rules list
Merge in SCITER/adguard-mini from AG-51916 to master

Squashed commit of the following:

commit 32f276549e1b15220888c4738653d4fe5078973e
Author: Pavel Kizin <p.kizin@adguard.com>
Date:   Fri Mar 20 10:45:53 2026 +0300

    AG-51916 Fix padding

commit 80f92ea3eea499e823092a59bce9d6b7280b445f
Author: Pavel Kizin <p.kizin@adguard.com>
Date:   Fri Mar 20 10:17:09 2026 +0300

    AG-51916 Fix scroll position for user rules list

--- a/AdguardMini/sciter-ui/modules/settings/components/UserRules/UserRules.module.pcss
+++ b/AdguardMini/sciter-ui/modules/settings/components/UserRules/UserRules.module.pcss
@@ -74,9 +74,9 @@
     &_scrollableContainer {
         overflow-y: auto;
         scroll-manner: scroll-manner(wheel-animation: false, step: 50%);
-        padding-right: var(--m-xxs);
+        padding-right: var(--m-m);
         height: *;
-        width: *;
+        width: calc(100% + var(--m-m));
     }
     &_emptyResult {
         height: *;
